--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
+    "build:test": "vite build --mode test",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
@@ -16,28 +17,135 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@antv/g2plot": "^2.4.33",
+    "@bytemd/plugin-gfm": "^1.22.0",
+    "@bytemd/vue-next": "^1.22.0",
+    "@number-flow/vue": "^0.4.8",
+    "@tinymce/tinymce-vue": "^6.3.0",
+    "@vee-validate/zod": "^4.15.1",
+    "@visactor/vchart": "^2.0.3",
+    "@vueuse/components": "^13.7.0",
+    "@vueuse/core": "^13.7.0",
+    "@vueuse/integrations": "^13.7.0",
+    "@zumer/snapdom": "^1.9.9",
+    "animate.css": "^4.1.1",
+    "axios": "^1.11.0",
+    "bytemd": "^1.22.0",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cropperjs": "^1.6.2",
+    "dayjs": "^1.11.13",
+    "defu": "^6.1.4",
+    "disable-devtool": "^0.3.9",
+    "echarts": "^6.0.0",
     "element-plus": "^2.11.1",
+    "embla-carousel-auto-scroll": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-fade": "^8.6.0",
+    "embla-carousel-vue": "^8.6.0",
+    "eruda": "^3.4.3",
+    "es-toolkit": "^1.39.10",
+    "filesize": "^11.0.2",
+    "hotkeys-js": "^3.13.15",
+    "lucide-vue-next": "^0.541.0",
+    "medium-zoom": "^1.1.0",
+    "mitt": "^3.0.1",
+    "motion-v": "^1.7.0",
+    "nprogress": "^0.2.0",
+    "path-browserify": "^1.0.1",
+    "path-to-regexp": "^8.2.0",
     "pinia": "^3.0.3",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "pinyin-pro": "^3.27.0",
+    "print-js": "^1.6.0",
+    "qrcode": "^1.5.4",
+    "qs": "^6.14.0",
+    "reka-ui": "^2.4.1",
+    "scule": "^1.3.0",
+    "sortablejs": "^1.15.6",
+    "spinkit": "^2.0.1",
+    "splitpanes": "^4.0.4",
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
+    "tinymce": "^7.9.1",
+    "ua-parser-js": "^2.0.4",
+    "v-wave": "^3.0.3",
+    "vconsole": "^3.15.1",
+    "vee-validate": "^4.15.1",
+    "vue": "^3.5.19",
+    "vue-currency-input": "^3.2.1",
+    "vue-data-ui": "^3.0.2",
+    "vue-esign": "^1.1.4",
+    "vue-hooks-plus": "^2.4.0",
+    "vue-i18n": "^11.1.11",
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.8",
+    "vxe-pc-ui": "^4.9.5",
+    "vxe-table": "^4.16.0",
+    "watermark-js-plus": "^1.6.3",
+    "xe-utils": "^3.7.8",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.16.5",
+    "@antfu/eslint-config": "^5.2.1",
+    "@clack/prompts": "^0.11.0",
+    "@faker-js/faker": "^10.0.0",
+    "@iconify/json": "^2.2.377",
+    "@iconify/vue": "^5.0.0",
+    "@intlify/eslint-plugin-vue-i18n": "^4.1.0",
+    "@intlify/unplugin-vue-i18n": "^6.0.8",
+    "@stylistic/stylelint-config": "^3.0.1",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/nprogress": "^0.2.3",
+    "@types/path-browserify": "^1.0.3",
+    "@types/qrcode": "^1.5.5",
+    "@types/qs": "^6.14.0",
+    "@types/sortablejs": "^1.15.8",
+    "@types/splitpanes": "^2.2.6",
+    "@unocss/eslint-plugin": "^66.4.2",
+    "@unocss/preset-legacy-compat": "^66.4.2",
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.31.0",
-    "eslint-plugin-vue": "~10.3.0",
-    "jiti": "^2.4.2",
+    "@vitejs/plugin-vue-jsx": "^5.0.1",
+    "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.21",
+    "boxen": "^8.0.1",
+    "eslint": "^9.34.0",
+    "fs-extra": "^11.3.1",
+    "http-server": "^14.1.1",
+    "lint-staged": "^16.1.5",
     "npm-run-all2": "^8.0.4",
-    "prettier": "3.6.2",
-    "typescript": "~5.8.0",
+    "picocolors": "^1.1.1",
+    "plop": "^4.0.1",
+    "postcss": "^8.5.6",
+    "postcss-nested": "^7.0.2",
+    "sass-embedded": "^1.90.0",
+    "simple-git-hooks": "^2.13.1",
+    "stylelint": "^16.23.1",
+    "stylelint-config-recess-order": "^7.2.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-scss": "^6.12.1",
+    "svgo": "^4.0.0",
+    "taze": "^19.3.0",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "unocss": "^66.4.2",
+    "unocss-preset-animations": "^1.2.1",
     "unplugin-auto-import": "^20.0.0",
+    "unplugin-turbo-console": "^2.2.0",
     "unplugin-vue-components": "^29.0.0",
-    "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0",
-    "vue-tsc": "^3.0.4"
+    "vite": "^7.1.3",
+    "vite-plugin-app-loading": "^0.4.0",
+    "vite-plugin-archiver": "^0.2.0",
+    "vite-plugin-banner": "^0.8.1",
+    "vite-plugin-compression2": "^2.2.0",
+    "vite-plugin-env-parse": "^1.0.15",
+    "vite-plugin-fake-server": "^2.2.0",
+    "vite-plugin-pages": "^0.33.1",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-devtools": "^8.0.1",
+    "vite-plugin-vue-meta-layouts": "^0.6.0",
+    "vue-tsc": "^3.0.6"
   }
 }
